--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">CarParking</string>
     <string name="Parking_Lot">Parking Lot</string>
+    <string name="space_one">SPACE ONE</string>
+    <string name="space_two">SPACE TWO</string>
+    <string name="space_three">SPACE THREE</string>
+    <string name="license_plate">License Plate</string>
+    <string name="brand">Brand</string>
+    <string name="name">NAME</string>
 </resources>
